# mingw-w64.github.io

./: .codespellrc  .gitignore  404.html  CNAME  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.json  sitemap.xml  wifi.cpp
.github/workflows/: main.yml
build-systems/cmake/: index.html
build-systems/meson/: index.html
changelog/: index.html
contribute/: index.html
docs/configure/: index.html
docs/overview/: index.html
donate/: index.html
downloads/: index.html
fonts/: README.md  build.sh  package-lock.json  package.json
getting-started/archlinux/: index.html
getting-started/debian/: index.html
getting-started/fedora/: index.html
getting-started/msys2/: index.html
getting-started/msys2-llvm/: index.html
search/: search_index.json
source/: index.html
stylesheets/: extra.css
support/: index.html
tools/gendef/: index.html
tools/genidl/: index.html
tools/genpeimg/: index.html
tools/widl/: index.html
web/: changelog.md  contribute.md  donate.md  downloads.md  index.m  index.md  source.md  support.md
web/build-systems/: cmake.md  meson.md
web/docs/: configure.md  overview.md
web/getting-started/: archlinux.md  debian.md  fedora.md  msys2-llvm.md  msys2.md
web/stylesheets/: extra.css  fonts.css
web/tools/: gendef.md  genidl.md  genpeimg.md  widl.md
web/wiki/: cross-quickstart.md  cross-win32-and-win64-compiler.md  feature-list.md  gendef.md  general-usage-instructions.md  history.md  home.md  information-about-releases.md  mailing-list.md  make.md  msys.md  native-win64-compiler.md  (+9 more)
(+76 files in other folders)
