[project]
name = "mingw-w64.org"
version = "1.0"
description = ""
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
requires-python = ">=3.11,<4"
dependencies = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9.5,<10",
]

[tool.poetry]
package-mode = false

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
