[project]
name = "mingw-w64.org"
version = "1.0"
description = ""
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
requires-python = ">=3.11,<4"
dependencies = [
    "zensical>=0.0.23",
]

[tool.poetry]
package-mode = false

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
